The call newInstance() is replaced by getDeclaredConstructor().newInstance()